@@ -39,6 +39,7 @@ Access:
  * Enable SMB2 / SMB3 support on mobile ports with libsmb2
  * Added support for the RIST (Reliable Internet Stream Transport) Protocol
  * Added avaudiocapture module as a replacement for qtsound, which is removed now
+ * Audio CD data tracks are now correctly detected and skipped
 
 Access output:
  * Added support for the RIST (Reliable Internet Stream Transport) Protocol
